Add api authentication for carts + minor fixes
